--- a/styles.css
+++ b/styles.css
@@ -7,54 +7,71 @@
 body {
   background-color: rgb(12, 12, 12) !important;
 }
-.sidebar{
-  width: 40vh !important;
+.sidebar {
+  width: 18vw !important;
+  height: 120vh;
   background-color: rgba(0, 0, 0, 1);
-  padding: 24px;
-  ;
+  padding: 20px;
 }
-.sidebar .logo img{
- width: 130px !important;
- padding-left: 10px;
+.logo img {
+  width: 130px !important;
+  padding-left: 10px;
 }
 
-.sidebar .navigation ul{
+.navigation ul {
   list-style: none !important;
-  margin-top: 20px !important;
+  margin-top: 15px !important;
   padding-left: 0px;
 }
-.sidebar .navigation ul li{
-  padding: 10px 10px !important;
+.navigation ul li {
+  padding: 2px 10px !important;
 }
-.sidebar .navigation ul li a, .text{
-  color:rgba(255, 255, 255, 1) !important;
+.navigation ul li a,
+.text {
+  color: rgba(255, 255, 255, 1) !important;
   text-decoration: none;
   font-weight: bold;
-  font-size: 13px;
+  font-size: 12px;
 }
-.sidebar .navigation ul li a img{
-  
+.navigation ul li a img {
   padding-right: 15px;
+  width: 35px;
 }
 .install-app {
   padding-left: 10px;
 }
-.install-app img{
+.install-app img {
   padding-right: 12px;
+  width: 35px;
 }
-.sidebar .navigation ul .page:hover {
+.page:hover {
   width: 200px;
-  height: 50px;
+  height: 30px;
   border-radius: 6px;
   background-color: #282828;
 }
 .main-container {
   margin-left: 245px;
   margin-bottom: 100px;
-  background: linear-gradient(180deg, #222222 0%, #1F1F1F 11.64%, #171717 25.66%, #161616 32.94%, #151515 35.98%, #131313 44.89%, #121212 55.22%, #121212 75.34%, #121212 85.45%, rgba(18, 18, 18, 0) 100%);
-
+  background: linear-gradient(
+    180deg,
+    #222222 0%,
+    #1f1f1f 11.64%,
+    #171717 25.66%,
+    #161616 32.94%,
+    #151515 35.98%,
+    #131313 44.89%,
+    #121212 55.22%,
+    #121212 75.34%,
+    #121212 85.45%,
+    rgba(18, 18, 18, 0) 100%
+  );
 }
-.main-container .topbar .prev-next-buttons button{
+.topbar {
+  position: sticky;
+  top: 0px;
+}
+.prev-next-buttons button {
   background-color: transparent;
   border: none;
   padding-left: 10px;
@@ -76,9 +93,108 @@ body {
   font-weight: 700;
   font-size: 15px;
 }
-.dowpdown select option{
+.dowpdown select option {
   background-color: rgba(0, 0, 0, 1);
   color: white;
   font-weight: 500;
   font-size: 15px;
 }
+.hero-section {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: 200px;
+}
+.hero-categories{
+  display: flex;
+  flex-wrap: wrap;
+  padding-inline: 2vw;
+  justify-content: space-around;
+  
+
+}
+.hero-section>h1 {
+  font-weight: 700;
+  font-size: 24px;
+  color: white;
+  margin-left: 30px;
+}
+.hero-categories .card {
+  margin-top: 15px;
+  width: 250px;
+  hight: 30px;
+  border-radius: 4px;
+  background: #303030;
+}
+.hero-categories .card img {
+  width: 60px !important;
+}
+
+.text1{
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
+  padding-left: 20px;
+}
+.hero-categories .card:hover {
+ box-shadow: 0px 5px 6px rgba(0, 0, 0, 1);
+}
+.categories-1 {
+  margin-top: 15px;
+  margin-left: 40px;
+  margin-right: 40px;
+  width: 75vw;
+}
+.categories-1>p:first-child {
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+}
+.categories-1>p:last-child {
+  color: white;
+  font-size: 12px;
+  font-weight: 700;
+}
+.categories-box {
+  width: 900px;
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: between;
+}
+.card-2 {
+  margin-left: 40px;
+  width: 150px;
+  height: 180px;
+  background-color: #181818;
+  display: inline-block !important;
+  box-sizing: border-box;
+  white-space: wrap;
+
+}
+.card-2>a>img {
+  padding-top: 15px;
+  display: flex;
+  margin: auto;
+  width: 100px;
+}
+.card-2>a>h6 {
+  margin-left: 25px;
+  padding-top: 20px;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+  display: flex;
+  justify-content: left;
+
+}
+.card-2>a>p {
+  margin-left: 25px;
+  padding-top: 2px;
+  color: white;
+  font-weight: 500;
+  font-size: 12px;
+  display: flex;
+  justify-content: left;
+
+}
+
