--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ body {
   background-color: rgb(12, 12, 12) !important;
 }
 .sidebar {
-  width: 18vw !important;
-  height: 120vh;
+  width: 200px !important;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 1);
   padding: 20px;
 }
@@ -141,8 +141,8 @@ body {
 .categories-1 {
   margin-top: 15px;
   margin-left: 40px;
-  margin-right: 40px;
-  width: 75vw;
+ padding-right: 20px;
+  width: 78vw;
 }
 .categories-1>p:first-child {
   color: white;
@@ -155,7 +155,7 @@ body {
   font-weight: 700;
 }
 .categories-box {
-  width: 900px;
+  width: 940px;
   height: 400px;
   display: flex;
   flex-wrap: wrap; 
@@ -164,7 +164,7 @@ body {
 .card-2 {
   margin-left: 40px;
   width: 150px;
-  height: 180px;
+  height: 180px; 
   background-color: #181818;
   display: inline-block !important;
   box-sizing: border-box;
@@ -197,4 +197,87 @@ body {
   justify-content: left;
 
 }
+.bottom-bar{
+  position: relative;
+  z-index: 3;
+  background-color: #181818;
+  height: 100px;
 
+}
+.bottom-bar .left-items {
+  display: flex;
+  align-items: center;
+}
+.bottom-bar .left-items img {
+  margin-left: 10px;
+}
+.bottom-bar .left-items img:last-child{
+  width: 20px;
+  height: 20px;
+}
+.bottom-bar .left-items h6{
+  font-weight: 700;
+  font-size: 12px;
+  color: white;
+  padding-left: 10px;
+}
+.bottom-bar .left-items p{
+  font-weight: 700;
+  font-size: 10px;
+  color: #B3B3B3;
+  ;
+  padding-left: 10px;
+}
+.bottom-bar .middle-items .upnav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-bar .middle-items .pay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-bar .middle-items .pay p {
+  color: white;
+  font-size: 10px;
+  font-weight: 700;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 12px;
+}
+.bottom-bar .right-items {
+  margin-right: 10px;
+}
+.note {
+  font-weight: 700;
+  color: #121212;
+  position: relative;
+  z-index: 4;
+  justify-content: right;
+  padding-right: 10px;
+ height: 30px;
+}
+.note img {
+  width: 25px;
+  height: 20px;
+  padding-right: 10px;
+}
+@media screen and (max-width: 480px) {
+  .topbar{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  
+  .hero-categories {
+    display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .categories-1 {
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+  }
