--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   background-color: rgb(12, 12, 12) !important;
 }
 .sidebar {
-  width: 200px !important;
+  width: 18% !important;
   height: 100vh;
   background-color: rgba(0, 0, 0, 1);
   padding: 20px;
@@ -45,8 +45,8 @@ body {
   width: 35px;
 }
 .page:hover {
-  width: 200px;
-  height: 30px;
+  width: 100%;
+  height: 5vh;
   border-radius: 6px;
   background-color: #282828;
 }
@@ -262,6 +262,70 @@ body {
   width: 25px;
   height: 20px;
   padding-right: 10px;
+}
+.album-art img{
+  width: 100%;
+  padding-top: 60%;
+}
+.topbar-1{
+  width: 100%;
+  background: linear-gradient(180deg, #90AEA7 0%, #000000 89.7%);
+}
+.pop-rn3 img{
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-top: 10%;
+  width: 80%;
+}
+.content{
+  padding-bottom: 5%;
+  padding-top: 4%;
+  color: white;
+}
+.play{
+  padding-left: 1%;
+  padding-bottom: 2%;
+}
+.play div{
+  padding-left: 1%;
+}
+.title{
+  padding-left: 2%;
+}
+.title div{
+  display: flex;
+}
+.title div p{
+  padding-right: 25%;
+  color: white;
+}
+.music{
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: 1vw;
+  padding-top: 5px;
+  padding-left: 10px;
+}
+.music:hover{
+  background: rgba(40, 40, 40, 1);
+  width: 100%;
+  height: 10vh;
+  border-radius: 6px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.music-4{
+  padding-left: 1vw;
+}
+.music-1{
+  width: 10%;
+}
+.music-2{
+  width: 50%;
+}
+.music-3{
+  padding-left: 12%;
 }
 @media screen and (max-width: 480px) {
   .topbar{
