--- a/styles.css
+++ b/styles.css
@@ -5,44 +5,45 @@
   font-family: DM sans;
 }
 body {
+  width: 100%;
   background-color: rgb(12, 12, 12) !important;
 }
 .sidebar {
   width: 18% !important;
   height: 100vh;
   background-color: rgba(0, 0, 0, 1);
-  padding: 20px;
+  padding: 1vw;
 }
 .logo img {
-  width: 130px !important;
-  padding-left: 10px;
+  width: 80% !important;
+  padding-left: 1vw;
 }
 
 .navigation ul {
   list-style: none !important;
-  margin-top: 15px !important;
+  margin-top: 4vh !important;
   padding-left: 0px;
 }
 .navigation ul li {
-  padding: 2px 10px !important;
+  padding: 0.1vw 1vw !important;
 }
 .navigation ul li a,
 .text {
   color: rgba(255, 255, 255, 1) !important;
   text-decoration: none;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 1vw;
 }
 .navigation ul li a img {
-  padding-right: 15px;
-  width: 35px;
+  padding-right: 1vw;
+  width: 20%;
 }
 .install-app {
-  padding-left: 10px;
+  padding-left: 1vw;
 }
 .install-app img {
-  padding-right: 12px;
-  width: 35px;
+  padding-right: 1vw;
+  width: 20%;
 }
 .page:hover {
   width: 100%;
@@ -67,13 +68,10 @@ body {
     rgba(18, 18, 18, 0) 100%
   );
 }
-.topbar {
-  position: sticky;
-  top: 0px;
-}
 .prev-next-buttons button {
   background-color: transparent;
   border: none;
+  width: 5vw;
   padding-left: 10px;
   padding-right: 5px;
   padding-top: 10px;
@@ -86,52 +84,52 @@ body {
   margin-top: 10px;
   margin-right: 10px;
 }
+.dowpdown img{
+  width: 25%;
+}
 .dowpdown select {
   background-color: transparent;
   color: white;
   border: none;
   font-weight: 700;
-  font-size: 15px;
+  font-size: 1vw;
 }
 .dowpdown select option {
   background-color: rgba(0, 0, 0, 1);
   color: white;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 1vw;
 }
 .hero-section {
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-right: 200px;
+  margin-left: 1vw;
+  margin-top: 2%;
+  margin-right: 10vw;
 }
 .hero-categories{
   display: flex;
   flex-wrap: wrap;
   padding-inline: 2vw;
   justify-content: space-around;
-  
-
 }
 .hero-section>h1 {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 2vw;
   color: white;
-  margin-left: 30px;
+  margin-left: 2vw;
 }
 .hero-categories .card {
   margin-top: 15px;
-  width: 250px;
-  hight: 30px;
+  width: 30%;
   border-radius: 4px;
   background: #303030;
 }
 .hero-categories .card img {
-  width: 60px !important;
+  width: 5vw !important;
 }
 
 .text1{
   color: white;
-  font-size: 15px;
+  font-size: 1vw;
   font-weight: 700;
   padding-left: 20px;
 }
@@ -140,22 +138,22 @@ body {
 }
 .categories-1 {
   margin-top: 15px;
-  margin-left: 40px;
- padding-right: 20px;
-  width: 78vw;
+  margin-left: 30px;
+ padding-right: 40px;
+  width: 100%;
 }
 .categories-1>p:first-child {
   color: white;
-  font-size: 20px;
+  font-size: 2vw;
   font-weight: 700;
 }
 .categories-1>p:last-child {
   color: white;
-  font-size: 12px;
+  font-size: 1vw;
   font-weight: 700;
 }
 .categories-box {
-  width: 940px;
+  width: 100%;
   height: 400px;
   display: flex;
   flex-wrap: wrap; 
@@ -163,11 +161,11 @@ body {
 }
 .card-2 {
   margin-left: 40px;
+  margin-top: 10px;
   width: 150px;
   height: 180px; 
   background-color: #181818;
   display: inline-block !important;
-  box-sizing: border-box;
   white-space: wrap;
 
 }
@@ -197,12 +195,15 @@ body {
   justify-content: left;
 
 }
+.bottom-bar-at{
+position: sticky;
+bottom: 0;
+z-index: 8;
+}
 .bottom-bar{
-  position: relative;
-  z-index: 3;
   background-color: #181818;
-  height: 100px;
-
+  width: 100%;
+  
 }
 .bottom-bar .left-items {
   display: flex;
@@ -210,22 +211,21 @@ body {
 }
 .bottom-bar .left-items img {
   margin-left: 10px;
+  width: 25%;
 }
 .bottom-bar .left-items img:last-child{
-  width: 20px;
-  height: 20px;
+  width: 10%;
 }
 .bottom-bar .left-items h6{
   font-weight: 700;
-  font-size: 12px;
+  font-size: 1vw;
   color: white;
   padding-left: 10px;
 }
 .bottom-bar .left-items p{
   font-weight: 700;
-  font-size: 10px;
+  font-size: 0.5vw;
   color: #B3B3B3;
-  ;
   padding-left: 10px;
 }
 .bottom-bar .middle-items .upnav {
@@ -240,7 +240,7 @@ body {
 }
 .bottom-bar .middle-items .pay p {
   color: white;
-  font-size: 10px;
+  font-size: 0.5vw;
   font-weight: 700;
   padding-left: 5px;
   padding-right: 5px;
@@ -249,18 +249,23 @@ body {
 .bottom-bar .right-items {
   margin-right: 10px;
 }
+.upnav {
+  width: 50vw;
+}
+.pay img{
+  width: 50vw;
+}
+
 .note {
   font-weight: 700;
   color: #121212;
-  position: relative;
-  z-index: 4;
   justify-content: right;
   padding-right: 10px;
- height: 30px;
+ width: 100%;
 }
 .note img {
-  width: 25px;
-  height: 20px;
+  width: 3%;
+  height: 4vh;
   padding-right: 10px;
 }
 .album-art img{
@@ -305,7 +310,7 @@ body {
   color: white;
   font-size: 1vw;
   padding-top: 5px;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 .music:hover{
   background: rgba(40, 40, 40, 1);
@@ -340,8 +345,7 @@ body {
       align-items: center;
   }
   .categories-1 {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     
   }
   }
